--- a/site.css
+++ b/site.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 body{
     font-family:Arial, Helvetica, sans-serif;
     background-color: #eee;
@@ -76,6 +79,36 @@ button{
 button:hover{
     background-color: rgb(165, 216, 236);
 }
+.viewed-button{
+    background-color: rgb(105, 219, 70);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+.viewed-button:hover{
+    background-color: rgb(152, 236, 126);
+}
+.unviewed-button{
+    background-color: rgb(243, 101, 65);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+.unviewed-button:hover{
+    background-color: rgb(245, 142, 117);
+}
 img{
     width:100%;
     display: flex;
@@ -122,6 +155,12 @@ img{
     overflow: hidden;
     overflow-y: scroll;
 }
+.favourite-list{
+    width: 100%;
+    height: 1130px;
+    overflow: hidden;
+    overflow-y: scroll;
+}
 .actor-components-List{
     display: grid;
     border-style: solid;
@@ -139,6 +178,14 @@ img{
     border-width: 3px;
     grid-template-columns: 30% 40% 30%;
     margin-left:400px;
+}
+.viewed-movie-components{
+    display: grid;
+    border-style: solid;
+    border-radius: 10px;
+    border-width: 3px;
+    grid-template-columns: 30% 40% 30%;
+    margin-left:0px;
 }
 .actor-component{
     display: grid;
