--- a/site.css
+++ b/site.css
@@ -152,13 +152,22 @@ img{
 .show .actor-form{
     transform: translateX(-300px);    
 }
+.movie-form{
+    background-color: #65a2ff;
+    text-align: center;
+    width: 300px;
+    height: 400px;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: transform 0.5s ease-in-out;
+}
+.show .movie-form{
+    transform: translateX(-300px);    
+}
 .role-form{
     z-index:1000;
-    top: 550px;
-    margin-left: 0px;
     background-color: white;
     padding: 40px;
-    box-shadow: 5px 5px 20px rgb(216, 216, 216);
 }
 .filter-form, .filter-actors-form{
     position:fixed;
@@ -231,7 +240,7 @@ img{
 }
 .movie-details{
     display: grid;
-    grid-template-columns: 70% 30%;
+    grid-template-columns: 60% 40%;
     top: 200px;
     background-color: #fff;
     box-shadow: 5px 5px 20px rgb(216, 216, 216);
